--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,37 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# Node.js / TypeScript
+node_modules/
+dist/
+*.log
+
+# Editor / IDE files
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
+*~
+*.log
+*.bak
+*.cache
+
+# Environment files
+.env
+
+# Build files
+*.build/
+build/
+
+# Dependency directories
+jspm_packages/
+typings/
+
+# Visual Studio Code folders
+.vscode/
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
