--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "crud api",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start:dev": "nodemon src/server.ts",
+    "start:prod": "npm run build && node dist/server.js",
+    "start:multi": "node src/multi-instance.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +18,7 @@
     "@types/node": "^20.11.16"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
