--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start:dev": "nodemon src/server.ts",
+    "start:dev": "nodemon --exec 'node --loader ts-node/esm src/server.ts'",
     "start:prod": "npm run build && node dist/server.js",
     "start:multi": "node src/multi-instance.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
-  "author": "",
+  "author": "Andrew Shmorhun",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
