--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start:dev": "nodemon --exec 'node --loader ts-node/esm src/server.ts'",
     "start:prod": "npm run build && node dist/server.js",
     "start:multi": "node src/multi-instance.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "author": "Andrew Shmorhun",
   "license": "ISC",
@@ -19,12 +22,15 @@
     "@types/node": "^20.11.16"
   },
   "devDependencies": {
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
