--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "esnext",
     "module": "ESNext",
+    "target": "ES6",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
@@ -12,6 +12,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
+  "module": "ESNext",
+  "target": "ES6",
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
